[package]
name = "cc3200"
version = "0.1.0"
authors = ["Fabrice Desré <fabrice@desre.org>"]
build = "build.rs"

[lib]
name = "cc3200"

[build-dependencies]
common-build = { path = "common-build" }

[dependencies]
cc3200-sys = { path = "cc3200-sys" }
freertos_alloc = { path = "freertos_alloc" }
freertos_rs = "0.1"
log = { version = "0.3", default-features = false }
smallhttp = { path = "/home/fabrice/dev/smallhttp" }

[profile.dev]
panic = "abort"

[profile.release]
# Note: gcc has some codegen issues with -O3
opt-level = "s"
debug = true
panic = "abort"
