[package]
name = "cc3200"
version = "0.1.0"
authors = ["Fabrice Desré <fabrice@desre.org>"]
build = "build.rs"

[lib]
name = "cc3200"

[build-dependencies]
common-build = { path = "common-build" }

[dependencies]
cc3200-sys = { path = "cc3200-sys" }
cfg-if = { path = "../cfg-if" }
freertos_alloc = { path = "freertos_alloc" }
freertos_rs = "0.1"
lazy_static = { version = "0.2", features = [ "spin_no_std" ] }
log = { version = "0.3", default-features = false }
numeric_utils = { path = "numeric_utils" }
smallhttp = { git = "https://github.com/fabricedesre/smallhttp.git" }

[profile.dev]
panic = "abort"

[profile.release]
# Note: gcc has some codegen issues with -O3
opt-level = "s"
debug = true
panic = "abort"

[features]
temperature-tmp006 = []
temperature-hdc1080 = []

board-launchpadxl = ["temperature-tmp006"]
board-sensorweb = ["temperature-hdc1080"]
